--- a/hw_frequency.ipynb
+++ b/hw_frequency.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "history_visible": true,
-      "authorship_tag": "ABX9TyPSgoGM0vUJW9UL9WsInD+r",
-      "include_colab_link": true
+      "history_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/anopsy/Datathon/blob/main/hw_frequency.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": 1,
